--- a/app/server/views/dashboard/modals/service-selection.jade
+++ b/app/server/views/dashboard/modals/service-selection.jade
@@ -1,5 +1,5 @@
 script(type="text/html", id="modal-service-selection")
-	.modal-service-selection.modal-centered.modal.stretch.hide.fade
+	.modal-service-selection.modal-centered.modal.stretch.hide
 		.modal-header
 			a.button-close(data-dismiss='modal')
 				img(src="../img/icons/latest/icon-exit.png")
