added pubsub to handle login/logout flow

--- a/app/server/views/dashboard/modals/service-selection.jade
+++ b/app/server/views/dashboard/modals/service-selection.jade
@@ -11,7 +11,7 @@ script(type="text/html", id="modal-service-selection")
 				// Mustache Template
 				{{#service.fields}}
 				li
-					div.service
+					div.service.is-enabled
 						div.service-chrome
 						div.service-header
 							h2 {{ . }}
