working on service selection controller

--- a/app/public/css/modules.styl
+++ b/app/public/css/modules.styl
@@ -115,6 +115,7 @@ Usage of a sublcass in HTML would look like this:
 	border 1px solid #ACACAC
 	box-shadow inset -1px -1px 1px rgba(255, 255, 255, 0.4), inset 1px 1px 1px rgba(255, 255, 255, 0.4)
 	border-radius 5px
+	pointer-events none
 
 .service-header
 	height 40px
