--- a/app/public/css/modules.css
+++ b/app/public/css/modules.css
@@ -12,7 +12,7 @@
 .service > .button-edit{display:none;position:absolute;top:-20px;right:-20px;z-index:3}
 .service.is-selected{-webkit-box-shadow:1px 1px 0 5px #94d043,0 0 3px 5px rgba(0,0,0,0.1);box-shadow:1px 1px 0 5px #94d043,0 0 3px 5px rgba(0,0,0,0.1)}
 .service.is-selected > .button-edit{display:block}
-.service-chrome{position:absolute;z-index:2;top:0;left:0;width:100%;height:100%;border:1px solid #acacac;-webkit-box-shadow:inset -1px -1px 1px rgba(255,255,255,0.4),inset 1px 1px 1px rgba(255,255,255,0.4);box-shadow:inset -1px -1px 1px rgba(255,255,255,0.4),inset 1px 1px 1px rgba(255,255,255,0.4);-webkit-border-radius:5px;border-radius:5px}
+.service-chrome{position:absolute;z-index:2;top:0;left:0;width:100%;height:100%;border:1px solid #acacac;-webkit-box-shadow:inset -1px -1px 1px rgba(255,255,255,0.4),inset 1px 1px 1px rgba(255,255,255,0.4);box-shadow:inset -1px -1px 1px rgba(255,255,255,0.4),inset 1px 1px 1px rgba(255,255,255,0.4);-webkit-border-radius:5px;border-radius:5px;pointer-events:none}
 .service-header{height:40px;background:#dadada;border-bottom:1px solid #cbcbcb;text-align:center;-webkit-border-radius:5px 5px 0 0;border-radius:5px 5px 0 0}
 .service-header > h2{line-height:40px;text-transform:uppercase}
 .service-thumbnail{float:left;position:relative;width:160px;height:124px;border-right:1px solid #d9d9d9;-webkit-box-shadow:inset -1px 0 0 #e5e5e5;box-shadow:inset -1px 0 0 #e5e5e5;line-height:123px;text-align:center}
