--- a/app/public/css/pages.css
+++ b/app/public/css/pages.css
@@ -51,7 +51,7 @@
 #inv-editor label{width:60px;text-align:right;margin-bottom:15px}
 #inv-editor input{width:50px;padding-right:10px;text-align:right;margin:-23px 0 0 75px}
 #team .heading{text-align:left;padding-left:20px}
-.member{padding:10px;margin:20px;color:#777;border:1px solid #ddd;background-color:#fff;border-radius:5px;-moz-border-radius:5px;-webkit-border-radius:5px;text-align:center;display:inline-block;*display:inline;*margin:0 20px 0 20px}
+.member{padding:10px;margin:10px;color:#777;border:1px solid #ddd;background-color:#fff;border-radius:5px;-moz-border-radius:5px;-webkit-border-radius:5px;text-align:center;display:inline-block;*display:inline;*margin:0 20px 0 20px}
 .member .image{width:100px;height:100px;margin:auto;margin-bottom:10px;background-color:rgba(0,0,0,0.1);background-image:-webkit-gradient(linear,0 0,100% 100%,color-stop(.25,rgba(255,255,255,0.2)),color-stop(.25,transparent),color-stop(.5,transparent),color-stop(.5,rgba(255,255,255,0.2)),color-stop(.75,rgba(255,255,255,0.2)),color-stop(.75,transparent),to(transparent));background-image:-webkit-linear-gradient(-45deg,rgba(255,255,255,0.2) 25%,transparent 25%,transparent 50%,rgba(255,255,255,0.2) 50%,rgba(255,255,255,0.2) 75%,transparent 75%,transparent);background-image:-moz-linear-gradient(-45deg,rgba(255,255,255,0.2) 25%,transparent 25%,transparent 50%,rgba(255,255,255,0.2) 50%,rgba(255,255,255,0.2) 75%,transparent 75%,transparent);background-image:-o-linear-gradient(-45deg,rgba(255,255,255,0.2) 25%,transparent 25%,transparent 50%,rgba(255,255,255,0.2) 50%,rgba(255,255,255,0.2) 75%,transparent 75%,transparent);background-image:linear-gradient(-45deg,rgba(255,255,255,0.2) 25%,transparent 25%,transparent 50%,rgba(255,255,255,0.2) 50%,rgba(255,255,255,0.2) 75%,transparent 75%,transparent);-webkit-background-size:30px 30px;-moz-background-size:30px 30px;background-size:30px 30px}
 #clients-page .heading{text-align:left;padding-left:20px}
 #clients-page #controls{position:absolute;top:4px;right:235px}
@@ -59,7 +59,7 @@
 #clients-page #controls .input-medium{width:225px;margin:0}
 #clients-page #controls #search{width:80px}
 #clients-page #controls #register{width:120px}
-#clients-page .member{cursor:pointer;position:relative;margin:0 5px 0 5px}
+#clients-page .member{cursor:pointer;position:relative}
 #clients-page .member .edit{width:28px;height:28px;cursor:pointer;position:absolute;top:-8px;right:-8px;background:url("/img/icons/edit.png")}
 #add-client .well{height:316px}
 #add-client #btn1,#btn2{top:445px}
