--- a/app/server/views/dashboard/dashboard-header.jade
+++ b/app/server/views/dashboard/dashboard-header.jade
@@ -1,6 +1,6 @@
-
 script
-	var activeClient=!{JSON.stringify(cdata)}
+	var session = !{JSON.stringify(session)};
+- var capitalize = function(s){return s.replace(/\w\S*/g, function(txt){return txt.charAt(0).toUpperCase() + txt.substr(1).toLowerCase();});}
 div.navbar.navbar-fixed-top.fat
 	div.navbar-inner
 		div.container
