--- a/app/server/views/dashboard/select-provider.jade
+++ b/app/server/views/dashboard/select-provider.jade
@@ -1,3 +1,5 @@
+script
+	var providers = !{JSON.stringify(providers)};
 include dashboard-header
 
 div.container
@@ -6,132 +8,31 @@ div.container
 			i.icon-back-arrow
 	div.row
 		div.reservation-wrapper
-			div.reservation
-				div.reservation-header
-					ul.l-horizontal.clearfix.reservation-info
-						li.reservation-org Glide Memorial
-						li |
-						li.reservation-address 330 Ellis Street, San Francisco, CA 94102
-						li |
-						li.reservation-phone 415.674.6000
-				div.reservation-body
-					ul.l-horizontal.clearfix.reservation-entries
-						li
-							div.service
-								div.service-chrome
-								div.service-header
-									h2 Mental Health
-								div.service-thumbnail
-									img(src='/img/icons/latest/icon-mental-general.png')
-								div.service-progress
-									div.v-progress
-										div.v-progress-bar
-						li
-							div.service
-								div.service-chrome
-								div.service-header
-									h2 Mental Health
-								div.service-thumbnail
-									img(src='/img/icons/latest/icon-mental-general.png')
-								div.service-progress
-									div.v-progress
-										div.v-progress-bar
-						li
-							div.service
-								div.service-chrome
-								div.service-header
-									h2 Mental Health
-								div.service-thumbnail
-									img(src='/img/icons/latest/icon-mental-general.png')
-								div.service-progress
-									div.v-progress
-										div.v-progress-bar
-						li.is-reserve
-							a.button.button-reserve.button-reserve-fat.loud Reserve
-			div.reservation
-				div.reservation-header
-					ul.l-horizontal.clearfix.reservation-info
-						li.reservation-org Glide Memorial
-						li |
-						li.reservation-address 330 Ellis Street, San Francisco, CA 94102
-						li |
-						li.reservation-phone 415.674.6000
-				div.reservation-body
-					ul.l-horizontal.clearfix.reservation-entries
-						li
-							div.service
-								div.service-chrome
-								div.service-header
-									h2 Mental Health
-								div.service-thumbnail
-									img(src='/img/icons/latest/icon-mental-general.png')
-								div.service-progress
-									div.v-progress
-										div.v-progress-bar
-						li
-							div.service
-								div.service-chrome
-								div.service-header
-									h2 Mental Health
-								div.service-thumbnail
-									img(src='/img/icons/latest/icon-mental-general.png')
-								div.service-progress
-									div.v-progress
-										div.v-progress-bar
-						li
-							div.service
-								div.service-chrome
-								div.service-header
-									h2 Mental Health
-								div.service-thumbnail
-									img(src='/img/icons/latest/icon-mental-general.png')
-								div.service-progress
-									div.v-progress
-										div.v-progress-bar
-						li
-							a.button.button-reserve.button-reserve-fat.loud Reserve
-			div.reservation
-				div.reservation-header
-					ul.l-horizontal.clearfix.reservation-info
-						li.reservation-org Glide Memorial
-						li |
-						li.reservation-address 330 Ellis Street, San Francisco, CA 94102
-						li |
-						li.reservation-phone 415.674.6000
-				div.reservation-body
-					ul.l-horizontal.clearfix.reservation-entries
-						li
-							div.service
-								div.service-chrome
-								div.service-header
-									h2 Mental Health
-								div.service-thumbnail
-									img(src='/img/icons/latest/icon-mental-general.png')
-								div.service-progress
-									div.v-progress
-										div.v-progress-bar
-						li
-							div.service
-								div.service-chrome
-								div.service-header
-									h2 Mental Health
-								div.service-thumbnail
-									img(src='/img/icons/latest/icon-mental-general.png')
-								div.service-progress
-									div.v-progress
-										div.v-progress-bar
-						li
-							div.service
-								div.service-chrome
-								div.service-header
-									h2 Mental Health
-								div.service-thumbnail
-									img(src='/img/icons/latest/icon-mental-general.png')
-								div.service-progress
-									div.v-progress
-										div.v-progress-bar
-						li
-							a.button.button-reserve.button-reserve-fat.loud Reserve
+			- for (var i = providers.length - 1; i >= 0; i--)
+				div.reservation
+					div.reservation-header
+						ul.l-horizontal.clearfix.reservation-info
+							li.reservation-org #{capitalize(providers[i].name)}
+							li |
+							li.reservation-address #{providers[i].addy1} #{providers[i].addy2}, #{providers[i].city}, #{providers[i].state}
+							li |
+							li.reservation-phone #{providers[i].phone}
+					div.reservation-body
+						ul.l-horizontal.clearfix.reservation-entries
+							- for (var k = 0; k < 3; k++)
+								- var s = providers[i].inv[k];
+								li
+									div.service
+										div.service-chrome
+										div.service-header
+											h2 #{s.name}
+										div.service-thumbnail
+											img(src='/img/icons/latest/icon-'+s.name+'-general.png')
+										div.service-progress
+											div.v-progress
+												div.v-progress-bar
+							li
+								a.button.button-reserve.button-reserve-fat.loud Reserve
 
 include modals/welcome
 include modals/goodbye
