minor css baseline fix

--- a/app/server/views/home/header.jade
+++ b/app/server/views/home/header.jade
@@ -25,7 +25,7 @@ div.navbar.navbar-fixed-top
 					li.divider-vertical
 				ul.nav.pull-right
 					li
-						#logged-in-user-name Welcome : #{capitalize(uName)}
+						#logged-in-user-name(style='margin-top:1px') Welcome : #{capitalize(uName)}
 					li
 						button#btn-logout.btn.btn-primary
 							i.icon-lock.icon-white
