offerings page bug fixes

--- a/app/server/views/modals/inv-editor.jade
+++ b/app/server/views/modals/inv-editor.jade
@@ -13,4 +13,4 @@
 					input.input-xlarge(type='text', value='0')
 	.modal-footer
 		button(data-dismiss="modal")#cancel.btn Cancel
-		button(type="submit")#submit.btn.btn-primary Submit
+		button(type="submit")#submit.btn.btn-primary Update
