adding network-status live view to logged in header

--- a/app/public/css/modules.css
+++ b/app/public/css/modules.css
@@ -69,14 +69,12 @@ button i{padding-left:8px}
 .button-group > a{margin-left:20px}
 .button-group > a:first-child{margin:0}
 .navbar button{width:100px}
-.navbar.fat .divider-vertical{height:47px}
-.navbar.fat .nav > li{padding-top:8px}
 .navbar .nav > li > a,.navbar .nav > li > a:hover,.navbar .nav > li > #logged-in-user-name{padding:9px 10px 11px}
-.navbar .nav > li > .brand{color:#d2d1d1}
+.navbar .nav > li > .brand{text-align:center;min-width:130px}
 .navbar-fixed-top{min-width:1024px}
 @media (max-width: 979px){.navbar-fixed-top{margin-bottom:0}
 }.navbar.list #btn-about{top:1px;right:175px;width:40px;position:absolute}
-.navbar.list #btn-about i{padding-left:0}
+.navbar i{padding-left:8px}
 .navbar.list #btn-login{top:1px;right:8px;width:160px;position:absolute}
 .username,.emphasize{color:#6eb6b5}
 .logged-out{color:#c12885}
