--- a/app/public/css/pages.styl
+++ b/app/public/css/pages.styl
@@ -14,40 +14,39 @@ Page styles are specific to certain areas of the site. For instance if you want 
 	adding it will break this stylesheet!
 */
 
-#dashboard
+#live
 	padding-top 40px
 	background #EAEAEA
-#dashboard .org
+#live .org
 	margin 20px
 	height 140px
-#dashboard p
+#live p
 	font-size 18px
 	font-weight bold
-#dashboard .orgName 
+#live .orgName 
 	float left
 	margin-right 10px
-#dashboard .orgAddy
+#live .orgAddy
 	color #27A3FA
-#dashboard hr
+#live hr
 	clear both
-#dashboard .service
+#live .service
 	float left
 	margin-right 10px
 	color #777
-	width 180px
-	height 140px
+	width 140px
+	height 134px
 	padding 10px 20px 6px 20px
-#dashboard .service .text
+#live .service .text
 	margin 0 10px 0 10px
-#dashboard .service .text .name
+#live .service .text .name
 	float left
-#dashboard .service .text .avail
+#live .service .text .avail
 	text-align right
-#dashboard .service hr
+#live .service hr
 	margin 5px 0 3px 0
-#dashboard .img
+#live .img
 	width 100%
-	height 120px
 	border-radius 5px
 	-moz-border-radius 5px
 	-webkit-border-radius 5px
