--- a/app/public/css/pages.css
+++ b/app/public/css/pages.css
@@ -3,18 +3,18 @@
 		vertical-align: text-top;
 	}
 .icon-back-arrow{background:url("../img/icons/latest/icon-back-arrow.png") no-repeat top left;width:33px;height:21px}
-#dashboard{padding-top:40px;background:#eaeaea}
-#dashboard .org{margin:20px;height:140px}
-#dashboard p{font-size:18px;font-weight:bold}
-#dashboard .orgName{float:left;margin-right:10px}
-#dashboard .orgAddy{color:#27a3fa}
-#dashboard hr{clear:both}
-#dashboard .service{float:left;margin-right:10px;color:#777;width:180px;height:140px;padding:10px 20px 6px 20px}
-#dashboard .service .text{margin:0 10px 0 10px}
-#dashboard .service .text .name{float:left}
-#dashboard .service .text .avail{text-align:right}
-#dashboard .service hr{margin:5px 0 3px 0}
-#dashboard .img{width:100%;height:120px;border-radius:5px;-moz-border-radius:5px;-webkit-border-radius:5px;text-align:center;line-height:100px}
+#live{padding-top:40px;background:#eaeaea}
+#live .org{margin:20px;height:140px}
+#live p{font-size:18px;font-weight:bold}
+#live .orgName{float:left;margin-right:10px}
+#live .orgAddy{color:#27a3fa}
+#live hr{clear:both}
+#live .service{float:left;margin-right:10px;color:#777;width:140px;height:134px;padding:10px 20px 6px 20px}
+#live .service .text{margin:0 10px 0 10px}
+#live .service .text .name{float:left}
+#live .service .text .avail{text-align:right}
+#live .service hr{margin:5px 0 3px 0}
+#live .img{width:100%;border-radius:5px;-moz-border-radius:5px;-webkit-border-radius:5px;text-align:center;line-height:100px}
 #login-container{width:340px;margin:160px auto;}
 #login-container label{margin:15px 0 5px 5px}
 #login-container button{width:150px;padding:6px 40px 6px 40px;float:left;margin-top:15px}
