--- a/app/server/views/dashboard/dashboard-header.jade
+++ b/app/server/views/dashboard/dashboard-header.jade
@@ -1,11 +1,9 @@
 script
-	var session = !{JSON.stringify(session)};
+	var session = !{JSON.stringify(session)} ;
 - var capitalize = function(s){return s.replace(/\w\S*/g, function(txt){return txt.charAt(0).toUpperCase() + txt.substr(1).toLowerCase();});}
-div.navbar.navbar-fixed-top.fat
+div.navbar.navbar-fixed-top
 	div.navbar-inner
 		div.container
-			a.brand(href="#")
-				img(src="../img/logo.png", alt="Bridge")
 			ul.nav.pull-right
 				li
 					a#client-name
