--- a/app/server/views/dashboard/select-provider.jade
+++ b/app/server/views/dashboard/select-provider.jade
@@ -40,8 +40,9 @@ include modals/timeout
 
 script(src='/socket.io/socket.io.js')
 script(src='/vendor/jquery.min.js')
+script(src='/vendor/jquery.pubsub.js')
 script(src='/vendor/bootstrap-modal.js')
 script(src='/vendor/bootstrap-transition.js')
-script(src='/js/dashboard/client-login.js')
+script(src='/js/dashboard/dashboard-header.js')
 script(src='/js/dashboard/select-provider.js')
 script(src='/js/utils/globals.js')
