center reservation items, remove dummy data, handle returning session services

--- a/app/public/css/layout.styl
+++ b/app/public/css/layout.styl
@@ -62,6 +62,15 @@ Override some Bootstrap defaults...
 .l-horizontal > li:first-child
 	margin-left 0
 
+/*
+Use a div displayed as a table to
+shrink wrap and center elements of dynamic width
+http://css-tricks.com/centering-list-items-horizontally-slightly-trickier-than-you-might-think/
+*/
+.wrapper-center
+	display table
+	margin 0 auto
+
 hr.tight
 	margin 18px 0 0
 
