--- a/app/public/css/layout.css
+++ b/app/public/css/layout.css
@@ -7,6 +7,7 @@
 .l-horizontal{margin:0;padding:0;list-style-type:none;width:100%}
 .l-horizontal > li{display:inline;float:left;margin-left:10px}
 .l-horizontal > li:first-child{margin-left:0}
+.wrapper-center{display:table;margin:0 auto}
 hr.tight{margin:18px 0 0}
 .page-container{position:fixed;background:#eee;top:40px;bottom:20px;width:100%}
 .page-container-cleared{background:#eee;width:100%;height:100%;padding-top:40px;min-width:1024px;padding-bottom:20px}
