--- a/app/public/css/modules.styl
+++ b/app/public/css/modules.styl
@@ -87,6 +87,7 @@ Usage of a sublcass in HTML would look like this:
 	background-image linear-gradient(top, #EBEBEB 90%, #DEDEDE)
 	background-repeat repeat-x
 	filter unquote('progid:dximagetransform.microsoft.gradient(startColorstr="#EBEBEB",endColorstr="#DEDEDE",GradientType=0)')
+	opacity 0.5
 /* this is a little redundant but it is consistent with other states */
 .service.is-enabled
 	cursor pointer
@@ -94,6 +95,7 @@ Usage of a sublcass in HTML would look like this:
 	background-image linear-gradient(top, #FFFFFF 90%, #EEEEEE)
 	background-repeat repeat-x
 	filter unquote('progid:dximagetransform.microsoft.gradient(startColorstr="#FFFFFF",endColorstr="#EEEEEE",GradientType=0)')
+	opacity 1
 .service > .button-edit
 	display none
 	position absolute
@@ -228,7 +230,7 @@ Override some Bootstrap defaults
 	width 790px
 	margin -250px 0 0 -395px
 .modal-centered .reservation-entries
-	padding-left 14px
+	padding-left 0
 .modal-centered .modal-body, .modal-centered .modal-header p
 	font-size 15px
 .modal-centered .modal-header
