--- a/app/public/css/modules.styl
+++ b/app/public/css/modules.styl
@@ -444,3 +444,12 @@ button i
 .group label
 	display inline-block
 	margin 5px 15px 5px 5px
+
+.striped
+	z-index -1
+	height 100%
+	width 100%
+	position fixed
+	top 0
+	left 0
+	background url("../img/bkgd/60degree_gray.png") #E7E7E7 repeat;
