--- a/app/server/views/dashboard/select-services.jade
+++ b/app/server/views/dashboard/select-services.jade
@@ -20,6 +20,7 @@ include dashboard-header
 									div.v-progress-bar
 	div.row
 		a#request-services.button.button-reserve Reserve
+	div.striped
 
 include modals/welcome
 include modals/goodbye
