--- a/app/server/views/dashboard/select-provider.jade
+++ b/app/server/views/dashboard/select-provider.jade
@@ -33,6 +33,7 @@ div.container
 												div.v-progress-bar
 							li
 								a.button.button-reserve.button-reserve-fat.loud Reserve
+	div.striped
 
 include modals/welcome
 include modals/goodbye
