adding about-bridge modal window to dashboard

--- a/app/public/css/pages.styl
+++ b/app/public/css/pages.styl
@@ -14,6 +14,9 @@ Page styles are specific to certain areas of the site. For instance if you want 
 	adding it will break this stylesheet!
 */
 
+#select-services, #select-providers
+	margin-top:3%
+
 #live
 	padding-top 40px
 	background #EAEAEA
