--- a/app/server/views/dashboard/dashboard-header.jade
+++ b/app/server/views/dashboard/dashboard-header.jade
@@ -13,3 +13,13 @@ div.navbar.navbar-fixed-top
 						i.icon-lock.icon-white
 						| Log In
 				li.divider-vertical
+				li
+					button#btn-about.btn.btn-primary
+						i.icon-heart.icon-white
+						| About Bridge
+				li.divider-vertical
+
+include modals/about
+include modals/welcome
+include modals/goodbye
+include modals/timeout
