--- a/app/public/css/modules.css
+++ b/app/public/css/modules.css
@@ -73,7 +73,7 @@ button i{padding-left:8px}
 .navbar .nav > li > .brand{text-align:center;min-width:130px}
 .navbar-fixed-top{min-width:1024px}
 @media (max-width: 979px){.navbar-fixed-top{margin-bottom:0}
-}.navbar.list #btn-about{top:1px;right:175px;width:40px;position:absolute}
+}.navbar #btn-about{width:140px}
 .navbar i{padding-left:8px}
 .navbar.list #btn-login{top:1px;right:8px;width:160px;position:absolute}
 .username,.emphasize{color:#6eb6b5}
