--- a/app/public/css/pages.css
+++ b/app/public/css/pages.css
@@ -3,6 +3,7 @@
 		vertical-align: text-top;
 	}
 .icon-back-arrow{background:url("../img/icons/latest/icon-back-arrow.png") no-repeat top left;width:33px;height:21px}
+#select-services,#select-providers{margin-top:3%}
 #live{padding-top:40px;background:#eaeaea}
 #live .org{margin:20px;height:140px}
 #live p{font-size:18px;font-weight:bold}
