--- a/app/server/views/dashboard/select-provider.jade
+++ b/app/server/views/dashboard/select-provider.jade
@@ -2,7 +2,7 @@ script
 	var providers = !{JSON.stringify(providers)};
 include dashboard-header
 
-div.container
+#select-providers.container
 	div.row
 		a.button.button-back.quiet Back
 			i.icon-back-arrow
@@ -33,10 +33,6 @@ div.container
 												div.v-progress-bar
 							li
 								a.button.button-reserve.button-reserve-fat.loud Reserve
-
-include modals/welcome
-include modals/goodbye
-include modals/timeout
 
 script(src='/socket.io/socket.io.js')
 script(src='/vendor/jquery.min.js')
