add some states to the reserve button

--- a/app/public/css/modules.styl
+++ b/app/public/css/modules.styl
@@ -326,6 +326,7 @@ button i
 	text-shadow 0 -1px 0 #615D62, 0 1px 0 #B5B5B6
 	text-transform uppercase
 	text-align center
+	opacity 1
 .button:hover
 	color #FFF
 
@@ -334,6 +335,9 @@ button i
 
 .button.quiet, .button.is-disabled
 	quietButton()
+
+.button.faded
+	opacity 0.5
 
 .button.caution
 	cautionButton()
