updating network-status layout

--- a/app/public/css/pages.styl
+++ b/app/public/css/pages.styl
@@ -22,7 +22,6 @@ Page styles are specific to certain areas of the site. For instance if you want 
 	background #EAEAEA
 #live .org
 	margin 20px
-	height 140px
 #live p
 	font-size 18px
 	font-weight bold
@@ -37,14 +36,14 @@ Page styles are specific to certain areas of the site. For instance if you want 
 	float left
 	margin-right 10px
 	color #777
-	width 180px
-	height 134px
-	padding 10px 20px 6px 20px
+	width 190px
+	height 110px
+	padding 15px
 #live .service .icon
 	float left
 	margin-top -2px
 #live .service .text
-	margin 0 10px 0 30px
+	margin 0 10px 0 34px
 #live .service .text .name
 	float left
 #live .service .text .avail
@@ -52,8 +51,11 @@ Page styles are specific to certain areas of the site. For instance if you want 
 #live .service hr
 	margin 5px 0 3px 0
 #live .service .icon img
-	width 20px
+	width 24px
 	height auto
+#live .service .sub
+	margin-top 8px
+
 // account login //
 
 #login-container{
