--- a/app/public/css/pages.css
+++ b/app/public/css/pages.css
@@ -5,18 +5,19 @@
 .icon-back-arrow{background:url("../img/icons/ui/icon-back-arrow.png") no-repeat top left;width:33px;height:21px}
 #select-services,#select-providers{margin-top:3%}
 #live{padding-top:40px;background:#eaeaea}
-#live .org{margin:20px;height:140px}
+#live .org{margin:20px}
 #live p{font-size:18px;font-weight:bold}
 #live .orgName{float:left;margin-right:10px}
 #live .orgAddy{color:#27a3fa}
 #live hr{clear:both}
-#live .service{float:left;margin-right:10px;color:#777;width:180px;height:134px;padding:10px 20px 6px 20px}
+#live .service{float:left;margin-right:10px;color:#777;width:190px;height:110px;padding:15px}
 #live .service .icon{float:left;margin-top:-2px}
-#live .service .text{margin:0 10px 0 30px}
+#live .service .text{margin:0 10px 0 34px}
 #live .service .text .name{float:left}
 #live .service .text .avail{text-align:right}
 #live .service hr{margin:5px 0 3px 0}
-#live .service .icon img{width:20px;height:auto}
+#live .service .icon img{width:24px;height:auto}
+#live .service .sub{margin-top:8px}
 #login-container{width:340px;margin:160px auto;}
 #login-container label{margin:15px 0 5px 5px}
 #login-container button{width:150px;padding:6px 40px 6px 40px;float:left;margin-top:15px}
