--- a/app/server/views/dashboard/select-services.jade
+++ b/app/server/views/dashboard/select-services.jade
@@ -9,7 +9,7 @@ include dashboard-header
 				- for (var i = services.length - 1; i >= 0; i--)
 					li
 						div(data-category=services[i].name).service
-							img.button-edit(src="../img/icons/large/icon-edit.png")
+							img.button-edit(src="../img/icons/ui/icon-edit.png")
 							div.service-chrome
 							div.service-header
 								h2 #{services[i].name}
