--- a/app/public/css/pages.styl
+++ b/app/public/css/pages.styl
@@ -54,7 +54,16 @@ Page styles are specific to certain areas of the site. For instance if you want 
 	width 24px
 	height auto
 #live .service .sub
-	margin-top 8px
+	height 22px
+	margin-top 6px
+#live .service .sub .bkgd
+	position absolute
+	margin-top -2px
+	width 190px
+	height 22px
+	opacity .5
+	display none
+	background-color green
 
 // account login //
 
