--- a/app/public/css/pages.styl
+++ b/app/public/css/pages.styl
@@ -180,7 +180,7 @@ Page styles are specific to certain areas of the site. For instance if you want 
 	position absolute
 	top -10px
 	right -10px
-	background url('/img/icons/edit.png')
+	background url('/img/icons/ui/edit.png')
 #inventory #our-services .service .text
 	float left
 	text-align left
