--- a/app/server/views/dashboard/network-status.jade
+++ b/app/server/views/dashboard/network-status.jade
@@ -1,33 +1,35 @@
-
+script
+	var orgs = !{JSON.stringify(orgs)};
 - var capitalize = function(s){return s.replace(/\w\S*/g, function(txt){return txt.charAt(0).toUpperCase() + txt.substr(1).toLowerCase();});}
 div.navbar.navbar-fixed-top
 	div.navbar-inner
 #live
 	- for (var i = orgs.length - 1; i >= 0; i--)
-		- var oid = orgs[i].name.replace(' ', '-');
+		- var oid = orgs[i].name.replace(/\s/g, '-');
+		- console.log(oid)
 		div(id=oid).org
 			p.orgName #{capitalize(orgs[i].name)}
 			p.orgAddy #{capitalize(orgs[i].addy1)} #{orgs[i].addy2} – #{capitalize(orgs[i].city)}, #{capitalize(orgs[i].state)} – #{capitalize(orgs[i].phone)}
 			#services
-				- for (var k = orgs[i].inv.length - 1; k >= 0; k--)
-					- var c = orgs[i].inv[k];
+				- for (var k = services.length - 1; k >= 0; k--)
+					- var s = services[k];
 					.service
-						.cat(id=c.name)
+						.cat(id=s.name)
 							.icon
-								img(src='/img/icons/small/icon-'+c.name+'-general.png')
+								img(src='/img/icons/small/icon-'+s.name+'-general.png')
 							.text
-								.name #{capitalize(c.name)}
-								.avail #{c.avail} / #{c.total}
+								.name #{capitalize(s.name)}
+								.avail 0 / 0
 						hr
-						- for (var n = c.fields.length - 1; n >= 0; n--)
-							- var s = c.fields[n];
-							.sub(id=c.name+'-'+s.name)
+						- for (var n = s.fields.length - 1; n >= 0; n--)
+							- var f = s.fields[n];
+							.sub(id=s.name+'-'+f)
 								.bkgd
 								.icon
-									img(src='/img/icons/small/icon-'+c.name+'-'+s.name+'.png')
+									img(src='/img/icons/small/icon-'+s.name+'-'+f+'.png')
 								.text
-									.name #{capitalize(s.name.replace('-', ' '))}
-									.avail #{s.avail} / #{s.total}
+									.name #{capitalize(f.replace('-', ' '))}
+									.avail 0 / 0
 		hr
 
 script(src='/socket.io/socket.io.js')
