--- a/app/public/css/modules.styl
+++ b/app/public/css/modules.styl
@@ -199,8 +199,7 @@ Usage of a sublcass in HTML would look like this:
 	padding-left 27px
 
 .reservation-entries
-	padding-top 18px
-	padding-left 20px
+	padding 18px 20px
 .reservation-entries > .is-reserve
 	margin-left 20px
 
@@ -230,7 +229,7 @@ Override some Bootstrap defaults
 	width 790px
 	margin -250px 0 0 -395px
 .modal-centered .reservation-entries
-	padding-left 0
+	padding 18px 0
 .modal-centered .modal-body, .modal-centered .modal-header p
 	font-size 15px
 .modal-centered .modal-header
@@ -365,7 +364,7 @@ button i
 	height 35px
 	padding-left 55px
 	padding-right 10px
-	margin-top 35px
+	margin-bottom 35px
 	font-size 22px
 	line-height 35px
 .button-back > .icon-back-arrow
