--- a/app/server/views/dashboard/modals/reservation-success.jade
+++ b/app/server/views/dashboard/modals/reservation-success.jade
@@ -6,37 +6,38 @@
 			span.username John Doe:
 		img.confirmed-check(src="../img/icons/ui/icon-confirmed-check.png")
 	.modal-body
-		ul.l-horizontal.clearfix.reservation-entries
-						li
-							div.service
-								div.service-chrome
-								div.service-header
-									h2 Mental Health
-								div.service-thumbnail
-									img(src='/img/icons/large/icon-mental-general.png')
-								div.service-progress
-									div.v-progress
-										div.v-progress-bar
-						li
-							div.service
-								div.service-chrome
-								div.service-header
-									h2 Mental Health
-								div.service-thumbnail
-									img(src='/img/icons/large/icon-mental-general.png')
-								div.service-progress
-									div.v-progress
-										div.v-progress-bar
-						li
-							div.service
-								div.service-chrome
-								div.service-header
-									h2 Mental Health
-								div.service-thumbnail
-									img(src='/img/icons/large/icon-mental-general.png')
-								div.service-progress
-									div.v-progress
-										div.v-progress-bar
+		.wrapper-center
+			ul.l-horizontal.clearfix.reservation-entries
+				li
+					div.service
+						div.service-chrome
+						div.service-header
+							h2 Mental Health
+						div.service-thumbnail
+							img(src='/img/icons/large/icon-mental-general.png')
+						div.service-progress
+							div.v-progress
+								div.v-progress-bar
+				li
+					div.service
+						div.service-chrome
+						div.service-header
+							h2 Mental Health
+						div.service-thumbnail
+							img(src='/img/icons/large/icon-mental-general.png')
+						div.service-progress
+							div.v-progress
+								div.v-progress-bar
+				li
+					div.service
+						div.service-chrome
+						div.service-header
+							h2 Mental Health
+						div.service-thumbnail
+							img(src='/img/icons/large/icon-mental-general.png')
+						div.service-progress
+							div.v-progress
+								div.v-progress-bar
 		.button-group
 			a.button.button-modal.button-logout.caution Logout
 			a.button.button-modal.button-more.loud Reserve More
