--- a/app/public/css/layout.styl
+++ b/app/public/css/layout.styl
@@ -47,6 +47,7 @@ Override some Bootstrap defaults...
 
 .reservation-wrapper
 	margin-top 30px
+	min-width 700px
 .reservation-wrapper:first-child
 	margin-top 25px
 
@@ -54,13 +55,15 @@ Override some Bootstrap defaults...
 	margin 0
 	padding 0
 	list-style-type none
-	width 100%
+	// width 100%
 .l-horizontal > li
 	display inline
 	float left
 	margin-left 10px
 .l-horizontal > li:first-child
 	margin-left 0
+.l-horizontal > li.pull-right
+	float right
 
 /*
 Use a div displayed as a table to
