--- a/app/server/views/dashboard/select-provider.jade
+++ b/app/server/views/dashboard/select-provider.jade
@@ -4,11 +4,13 @@ script
 include dashboard-header
 
 #select-providers.container
+	//- div.row
+	//- 	a.button.button-back.quiet Back
+	//- 		i.icon-back-arrow
 	div.row
-		a.button.button-back.quiet Back
-			i.icon-back-arrow
-	div.row
-		div.reservation-wrapper
+		div.reservation-wrapper.wrapper-center
+			a.button.button-back.quiet Back
+				i.icon-back-arrow
 			- for (var i = providers.length - 1; i >= 0; i--)
 				div.reservation
 					div.reservation-header
@@ -33,7 +35,7 @@ include dashboard-header
 										div.service-progress
 											div.v-progress
 												div.v-progress-bar
-							li
+							li.pull-right
 								a.button.button-reserve.button-reserve-fat.loud Reserve
 	div.striped
 
