--- a/app/server/views/dashboard/select-provider.jade
+++ b/app/server/views/dashboard/select-provider.jade
@@ -4,9 +4,6 @@ script
 include dashboard-header
 
 #select-providers.container
-	//- div.row
-	//- 	a.button.button-back.quiet Back
-	//- 		i.icon-back-arrow
 	div.row
 		div.reservation-wrapper.wrapper-center
 			a.button.button-back.quiet Back
@@ -36,12 +33,17 @@ include dashboard-header
 											div.v-progress
 												div.v-progress-bar
 							li.pull-right
-								a.button.button-reserve.button-reserve-fat.loud Reserve
+								a(data-provider="#{providers[i].name}").button.button-reserve.button-reserve-fat.loud Reserve
 	div.striped
+
+include modals/reservation-confirm
+include modals/reservation-success
 
 script(src='/socket.io/socket.io.js')
 script(src='/vendor/jquery.min.js')
 script(src='/vendor/jquery.pubsub.js')
+script(src='/vendor/underscore.min.js')
+script(src='/vendor/mustache.js')
 script(src='/vendor/bootstrap-modal.js')
 script(src='/vendor/bootstrap-transition.js')
 script(src='/js/dashboard/dashboard-header.js')
