added timeout to the two dashboards

--- a/app/server/views/dashboard/modals/timeout.jade
+++ b/app/server/views/dashboard/modals/timeout.jade
@@ -3,6 +3,6 @@
 		a.button-close(data-dismiss="modal")
 			img(src="../img/icons/ui/icon-exit.png")
 		h3 You’re about to time out of your session. Are you still there, 
-			span.username John Doe?
+			span.username Jane Doe?
 	.modal-body 
 		a.button.button-modal.button-continue.loud Continue
