--- a/app/server/views/dashboard/select-services.jade
+++ b/app/server/views/dashboard/select-services.jade
@@ -34,3 +34,4 @@ script(src='/vendor/bootstrap-transition.js')
 script(src='/js/dashboard/dashboard-header.js')
 script(src='/js/dashboard/select-services.js')
 script(src='/js/utils/globals.js')
+script(src='/js/utils/timeout.js')
