--- a/app/server/views/dashboard/select-provider.jade
+++ b/app/server/views/dashboard/select-provider.jade
@@ -49,3 +49,4 @@ script(src='/vendor/bootstrap-transition.js')
 script(src='/js/dashboard/dashboard-header.js')
 script(src='/js/dashboard/select-provider.js')
 script(src='/js/utils/globals.js')
+script(src='/js/utils/timeout.js')
