--- a/app/public/css/pages.styl
+++ b/app/public/css/pages.styl
@@ -16,10 +16,20 @@ Page styles are specific to certain areas of the site. For instance if you want 
 
 #select-services, #select-providers
 	margin-top:3%
-
 #live
 	padding-top 40px
 	background #EAEAEA
+#live .brand
+	padding-right 0
+#live .status-icon
+	width 20px
+	height 20px
+	margin 8px 0 0 10px
+	background url('/img/icons/ui/status-icon.png')
+#live ul.dropdown-menu li
+	height 30px
+#live .checkbox
+	margin 6px 3px
 #live .org
 	margin 20px
 #live p
