saving reservations, printing to /reservations

--- a/app/server/views/dashboard/modals/reservation-confirm.jade
+++ b/app/server/views/dashboard/modals/reservation-confirm.jade
@@ -1,4 +1,4 @@
-.modal-reservation-confirm.modal-centered.modal.hide.fade
+.modal-reservation-confirm.modal-centered.modal.hide
 	.modal-header
 		a.button-close(data-dismiss='modal')
 			img(src="../img/icons/ui/icon-exit.png")
