--- a/app/server/views/dashboard/modals/reservation-success.jade
+++ b/app/server/views/dashboard/modals/reservation-success.jade
@@ -1,4 +1,4 @@
-.modal-reservation-success.modal-centered.modal.stretch.hide.fade
+.modal-reservation-success.modal-centered.modal.stretch.hide
 	.modal-header
 		a.button-close(data-dismiss='modal')
 			img(src="../img/icons/ui/icon-exit.png")
